--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "kill-switch-server",
   "version": "1.0.0",
+  "description": "API server for mobile app maintenance mode",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.18.2"
   }
 }
